--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "@worldcoin/idkit": "^1.3.0",
+    "@worldcoin/idkit-core": "^1.3.0",
     "ethers": "^6.13.4",
     "next": "^14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@worldcoin/idkit": "^1.3.0",
-    "@worldcoin/idkit-core": "^1.3.0"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
