--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@worldcoin/idkit": "^1.3.0",
     "@worldcoin/idkit-core": "^1.3.0",
     "ethers": "^6.13.4",
+    "flowbite-react": "^0.10.2",
     "next": "^14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -25,7 +26,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
-    "tailwindcss": "3.4.14",
+    "tailwindcss": "3.4.17",
     "typescript": "^5"
   }
 }
