--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "flowbite-react": "^0.10.2",
     "next": "^14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
