--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@worldcoin/idkit": "^1.3.0",
     "@worldcoin/idkit-core": "^1.3.0",
     "ethers": "^6.13.4",
+    "flowbite": "^3.0.0",
     "flowbite-react": "^0.10.2",
     "next": "^14.2.5",
     "react": "18.3.1",
